# project

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  Toolchain-BeagleBone-Black.cmake  Toolchain-RaspberryPi.cmake  cmake_install.cmake  common.cpp  common.h  config.cpp  config.h  log.cfg  log.cpp  log.h  main.cpp
app/: .app_mgr.h.swp  CMakeLists.txt  Makefile  app_mgr.cpp  app_mgr.h  app_sppconnector.cpp  app_sppconnector.h  cmake_install.cmake
audio/: CMakeLists.txt  Makefile  audio_captureinstance.cpp  audio_captureinstance.h  audio_capturemgr.cpp  audio_capturemgr.h  audio_channel.cpp  audio_channel.h  audio_formatter.cpp  audio_formatter.h  audio_processor.cpp  audio_processor.h  cmake_install.cmake
bluetooth/: .spp_connection.cpp.swp  .spp_connection.h.swp  CMakeLists.txt  Makefile  cmake_install.cmake  spp_connection.cpp  spp_connection.h  spp_server.cpp  spp_server.h
control/: CMakeLists.txt  Makefile  cmake_install.cmake  control.cpp  control.h  control.proto
test/: build.sh  client_sim.py  rfcomm.py
thirdparty.cmake/: FindBluez.cmake  FindLibEV.cmake  FindLibINIConfig.cmake  FindLibJSON.cmake  FindLog4Cxx.cmake
